samples/_failures_safe/1761005058_5e2625_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cde1bf54.c: In function ‘tokenize’:
./samples/SAFE/__tmp_cde1bf54.c:158:17: error: expected expression at end of input
  158 |                 tokens[token_count++] =
      |                 ^~~~~~
./samples/SAFE/__tmp_cde1bf54.c:158:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_cde1bf54.c:158:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_cde1bf54.c:158:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_cde1bf54.c:158:17: error: expected declaration or statement at end of input
